@@ -146,6 +146,7 @@ Collate:
     'position-identity.r'
     'position-jitter.r'
     'position-jitterdodge.R'
+    'position-offset.r'
     'position-stack.r'
     'quick-plot.r'
     'save.r'
