@@ -291,6 +291,7 @@ export(position_fill)
 export(position_identity)
 export(position_jitter)
 export(position_jitterdodge)
+export(position_offset)
 export(position_stack)
 export(qplot)
 export(quickplot)
