@@ -20,6 +20,7 @@ Other position adjustments: \code{\link{position_dodge}};
   \code{\link{position_fill}};
   \code{\link{position_jitterdodge}};
   \code{\link{position_jitter}};
+  \code{\link{position_offset}};
   \code{\link{position_stack}}
 }
 
